--- a/backend/package.json
+++ b/backend/package.json
@@ -12,5 +12,6 @@
   "scripts": {
     "start": "node app.js",
     "dev": "nodemon app.js"
-  }
+  },
+  "proxy": "https://restaurante-app-murex.vercel.app/"
 }
